[package]
name = "pwm-control"
version = "0.1.0"
authors = ["Energy-Quant <128940291+Energy-Quant@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.74"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "embassy", "esp-idf-svc/native"]

# -> below line, pio, cause the issues
# pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


[dependencies]

esp_pwm_reader = "0.1.2"
log = { version = "0.4.20", default-features = false }
esp-idf-sys = { version = "0.33.7", default-features = false }
esp-idf-hal = { version = "0.42.5", optional = true, default-features = false }
esp-idf-svc = { version = "0.47.3", optional = true, default-features = false }
embedded-svc = { version = "0.26.4", optional = true, default-features = false }


[build-dependencies]

embuild = "0.31.4"